# ai-companion-llm-backend

./: README.md  main.py  pyproject.toml  requirements.in  requirements.txt  requirements_ja.txt  requirements_ko.txt  requirements_langchain.txt  requirements_linux_cu128.txt  requirements_macos_metal.txt  requirements_windows_cu128.txt  requirements_zh.txt
.github/workflows/: release.yml
src/ai_companion_llm_backend/: __init__.py  base_handlers.py  gguf_handlers.py  logging.py  mlx_handlers.py  transformers_handlers.py  vllm_handlers.py
src/ai_companion_llm_backend/interfaces/: __init__.py  models.py  providers.py
src/ai_companion_llm_backend/langchain_integrator/: __init__.py  document.py  state.py
src/ai_companion_llm_backend/models/: __init__.py  lmstudio.py
src/ai_companion_llm_backend/provider/: __init__.py  anthropic.py  google_genai.py  huggingface.py  lmstudio.py  mistralai.py  ollama.py  openai.py  openrouter.py  perplexity.py  requesty.py  vllm.py  xai.py
src/ai_companion_llm_backend/registries/: model_registry.py  provider_registry.py
src/ai_companion_llm_backend/utils/: get_models.py
src/langchain_huggingface_hijack/chat_models/: __init__.py  huggingface.py
src/langchain_huggingface_hijack/llms/: huggingface_pipeline.py
src/langchain_mlx/: __init__.py
src/langchain_mlx/chat_models/: __init__.py  mlx.py
src/langchain_mlx/llms/: __init__.py  mlx_pipeline.py
