[build-system]
requires=[
    "setuptools>=42",
    "wheel",
    "build"
]
build-backend="setuptools.build_meta"

[project]
name = "ai-companion-llm-backend"
dynamic=["dependencies", "version"]

requires-python = ">=3.10, <3.14"
authors=[
    {name="Hyunbeen Chang", email="bean980310@gmail.com"}
]
maintainers=[
    {name="Hyunbeen Chang", email="bean980310@gmail.com"}
]

description = "Add your description here"
readme = "README.md"

[tool.setuptools.dynamic]
dependencies={file=["requirements.txt"]}
version={attr="ai_companion_llm_backend.__init__.__version__"}
