[build-system]
requires=[
    "setuptools>=80",
    "setuptools-scm>=8",
    "wheel",
    "build",
    "uv-build"
]

[project]
name = "ai-companion-llm-backend"
dynamic=["dependencies", "version", "optional-dependencies"]
authors=[
    {name="Hyunbeen Chang", email="bean980310@gmail.com"}
]
maintainers=[
    {name="Hyunbeen Chang", email="bean980310@gmail.com"}
]
description = "LLM Backend for AI Companion"
readme = "README.md"
requires-python = ">=3.10, <3.14"

[tool.setuptools.dynamic]
dependencies={file=["requirements.txt"]}
version={attr="ai_companion_llm_backend.__init__.__version__"}

[tool.setuptools.dynamic.optional-dependencies]
macos_metal = { file = ["requirements_macos_metal.txt"]}
ko = { file = ["requirements_ko.txt"]}
ja = { file = ["requirements_ja.txt"]}
zh = { file = ["requirements_zh.txt"]}
windows_cu128 = { file = ["requirements_windows_cu128.txt"]}
linux_cu128 = { file = ["requirements_linux_cu128.txt"]}
langchain = { file = ["requirements_langchain.txt"]}
train = { file = ["requirements_train.txt"]}
